# wad

./: .gitmodules  CMakeLists.txt  STATUS.md
src/wad/: dll_api.h  error.h  wad.h  wad_struct.h
src/wad/read/: read.c  read.h
src/wad/read/read_/: read_WADDirectory.h  read_WADFile.h  read_WADSubfile.h  read_struct_name.h
